<resources>
    <string name="app_name">Xmpp</string>
    <string name="tab_msg_str">消息</string>
    <string name="tab_discover_str">发现</string>
    <string name="tab_friend_str">好友</string>
    <string name="login_username">用户名</string>
    <string name="login_password">密码</string>
    <string name="login">登录</string>
    <string name="loging">登录中...</string>
    <string name="login_error">登录失败：</string>
    <string name="new_user">新用户</string>
    <string name="login_setting">登陆设置</string>
    <string name="inputUsername">用户名不能为空！</string>
    <string name="inputPassword">密码不能为空！</string>
    <string name="loading">加载中…</string>
    <string name="on_line">在线</string>
    <string name="on_sleep">休眠</string>
    <string name="on_busy">忙碌</string>
    <string name="off_line">离线</string>
    <string name="period_subscrib">周期订阅</string>
    <string name="hight_limit_subscrib">上线订阅</string>
    <string name="low_limit_subscrib">下线订阅</string>
    <string name="clear_msg">清空所有消息</string>

</resources>
