<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorPrimary"
              android:orientation="vertical">

    <com.cqupt.xmpp.widght.CircleImageView
        android:id="@+id/login_user_img"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="120dp"
        android:src="@mipmap/login_image"
        app:civ_border_color="@color/text_color"
        app:civ_border_width="2dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="30dp">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            app:met_baseColor="@color/gray_900"
            app:met_primaryColor="#80CBC4"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/login_username"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="5dp"
            android:text="@string/login_username"
            android:textColor="@color/text_color"/>
    </RelativeLayout>



        <RelativeLayout
            android:focusable="false"
            android:clickable="false"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:inputType="textPassword"
                app:met_baseColor="@color/gray_900"
                app:met_primaryColor="#80CBC4"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/login_password"
                android:layout_marginBottom="12dp"
                android:layout_marginLeft="5dp"
                android:text="@string/login_password"
                android:textColor="@color/text_color"/>

            <ImageView
                android:clickable="true"
                android:focusable="true"
                android:id="@+id/show_password_img"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:scaleType="center"
                android:src="@drawable/show_password_select"/>
        </RelativeLayout>





    <LinearLayout
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/login_button_slector"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="20sp"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/login_setting"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="8dp"
            android:gravity="center"
            android:text="@string/login_setting"
            android:textColor="@color/text_color"
            android:textSize="15sp"/>

    </RelativeLayout>

</LinearLayout>
